--- a/canary store/style.css
+++ b/canary store/style.css
@@ -3,34 +3,23 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
 }
-/* body{
-    background-color: rgba(245, 245, 245, 0.932);
-
-} */
-
 
 header{
   position: sticky;
   top: 0;
-  
 }
-
 nav{
     background-color: rgba(83, 137, 238, 0.664);
     display: grid;
     grid-template-columns: 3fr repeat(7,2fr);
     column-gap: 10px;
-    
 }
 a{
   text-decoration: none;
   justify-self: flex-start;
   color: aliceblue;
   align-self: center;
-  /* padding-top: 20px; */
-  
 }
 a.link-hover:hover{
        width: fit-content;
@@ -43,8 +32,6 @@ a.link-hover:hover{
 }
 #buy-now-btn{
   justify-self: flex-end;
-  
-  
 }
 #buy-now-btn button{
   background: transparent;
@@ -63,17 +50,13 @@ section{
   justify-content: center;
 }
 span{
-  
   text-transform: uppercase;
   font-family: 'Andada Pro', serif;
   font-size: 5fr;
   color: darkcyan;
-  
-  
 }
 section img{
   width: 100px;
- 
 }
 div.div-about{
   display: grid;
@@ -88,14 +71,10 @@ h6{
     color: rgb(7, 136, 250);
     justify-self: center;
     padding: 10px;
-    
 }
 div.picture{
   display: grid;
   grid-template-columns: repeat(4,10fr);
-  /* grid-auto-rows: auto; */
-  /* grid-auto-columns: auto; */
-  
   padding: 20px;
   gap: 5px;
 }
@@ -120,10 +99,8 @@ div.picture img{
 form{
   display: grid;
   row-gap: 10px;
-  /* grid-template-columns: repeat(4,10fr); */
 }
 input,textarea{
-  /* text-decoration-style: none; */
   background-color: rgb(240, 238, 238);
   border: none;
   border-style: none;
@@ -140,13 +117,41 @@ button.submit-btn{
   border: none;
   color: azure;
   background:linear-gradient(rgb(246, 122, 53),rgb(231 ,206 ,23)) ;
-  
   padding: 5px;
-  /* border-radius: 30% 0 30% 0; */
 }
 p{
   opacity: .5;
   font-size: 15px;
   color: black;
   justify-self: flex-end;
+}
+footer{
+  display: grid;
+  grid-template-columns: repeat(4,10fr);
+  justify-content: center;
+  align-content: flex-end;
+  background-color: rgb(14, 13, 13);
+  opacity: .5;
+  padding: 50px;
+}
+footer p{
+  font-size: 15px;
+  font-family: 'Andada Pro', serif;
+  color: ivory;
+}
+/* buy now page */
+div.get-order{
+      display: grid;
+      /* grid-template-columns: repeat(5,5fr); */
+      padding: 150px;
+}
+#contain{
+  display: grid;
+}
+p#buy{
+    font-family: 'Andada Pro', serif;
+    font-size: 20px;
+    color: rgb(7, 136, 250);
+    padding: 20px;
+    justify-self: center;
 }
